--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,12 @@ dependencies {
     //Dependency for Material Components
     implementation 'com.google.android.material:material:<version>'
 
+    //Room
+    def room_version = "2.4.2"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation "androidx.room:room-guava:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
 }
